--- a/templates/main.html
+++ b/templates/main.html
@@ -6,11 +6,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width">
 </head>
-<body>
+<body style="min-width: 1366px;">
 <div style="display: flex; flex-direction: row">
     <img src="/static/background.png" width="70%" height="100%">
-    <div style="width: 30%; height: 100vh; align-items: center; display: flex; flex-direction: column; justify-content: center">
+    <div style="width: 30%; height: 100%; align-items: center; display: flex; flex-direction: column; justify-content: center">
         <p style="font-family: 'Roboto', Serif; font-weight: 900; font-size: 80px; margin-left: 15px">LOVE AN ANIMAL</p>
         <div style="background-color: #00b4ff; width: 400px; height: 15px; margin-top: -60px"></div>
         <p style="font-family: 'Roboto', Serif; font-weight: 500; font-size: 35px; margin-left: 15px; margin-right: auto">HEALTHY PETS</p>
