--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
         <div style="background-color: #00b4ff; width: 400px; height: 15px; margin-top: -60px"></div>
         <p style="font-family: 'Roboto', Serif; font-weight: 500; font-size: 35px; margin-left: 15px; margin-right: auto">HEALTHY PETS</p>
         <p style="font-family: 'Roboto', Serif; font-weight: 400; font-size: 20px; margin-left: 15px; margin-right: auto">Сайт создан с целью привлечения внимания общественности к проблемам связанными с домашними животными.</p>
-        <p style="font-family: 'Roboto', Serif; font-weight: 400; font-size: 20px; margin-left: 15px; margin-right: auto">www.yoursite.com</p>
+        <p style="font-family: 'Roboto', Serif; font-weight: 400; font-size: 20px; margin-left: 15px; margin-right: auto">https://healthypetssite.herokuapp.com</p>
     </div>
 </div>
 </body>
